# Meshlet-Renderer

./: .gitignore  README.md  dependencies.bat
src/: CMakeLists.txt  README.md  config.lua  inputHandler.cpp  inputHandler.h  jinsoku.h  luaparser.h  main.cpp  presenter.cpp  presenter.h
src/jsvk/: common.h  config.h  geometryProcessing.cpp  geometryProcessing.h  jsvkBuffer.h  jsvkContext.cpp  jsvkContext.h  jsvkDevice.h  jsvkExtensions.h  jsvkHelpers.cpp  jsvkHelpers.h  jsvkMemoryManager.h  jsvkRenderContext.cpp  jsvkRenderContext.h  jsvkRenderFrame.cpp  jsvkRenderFrame.h  jsvkRenderer.h  jsvkRenderer_ms.cpp  jsvkRenderer_vs.cpp  jsvkRenderer_xr_vs.cpp  jsvkResources.h  jsvkResources_ms.cpp  jsvkResources_vs.cpp  jsvkResources_xr_vs.cpp  jsvkSwapchain.h  jsvkTexture.cpp  jsvkTexture.h  jsvkThreadpool.hpp  jsvkUtilities.cpp  jsvkUtilities.h  lodCamera.cpp  lodCamera.hpp  lodGeometry.cpp  lodGeometry.hpp  lodThreadStealers.cpp  meshlet_builder.hpp  structures.h
src/jsvk/shaders/: compile.bat  meshlet.mesh  meshlet.task  meshletFrag.spv  meshletMesh.spv  meshletMeshletColorFrag.spv  meshletMeshletColorWireFrag.spv  meshletNormalFrag.spv  meshletTask.spv  meshletTexture.frag  meshletTexture.mesh  meshletTextureFrag.spv  meshletTextureMesh.spv  meshlet_meshlet_color.frag  meshlet_meshlet_wire_color.frag  meshlet_normal.frag  meshlet_phong.frag
